Week4: open api gen code
