# Week4/openapi-comparison/0_OpenAPI/generated-server/openapi_server/models/__init__.py
@@ -1,0 +1,5 @@
+# flake8: noqa
+# import models into model package
+from openapi_server.models.book import Book
+from openapi_server.models.books_get200_response import BooksGet200Response
+from openapi_server.models.create_book import CreateBook
