# Week4/openapi-comparison/0_OpenAPI/generated-server/openapi_server/models/book.py
@@ -1,0 +1,217 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server import util
+
+
+class Book(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, id=None, title=None, author=None, isbn=None, publish_year=None, price=None, category=None):  # noqa: E501
+        """Book - a model defined in OpenAPI
+
+        :param id: The id of this Book.  # noqa: E501
+        :type id: str
+        :param title: The title of this Book.  # noqa: E501
+        :type title: str
+        :param author: The author of this Book.  # noqa: E501
+        :type author: str
+        :param isbn: The isbn of this Book.  # noqa: E501
+        :type isbn: str
+        :param publish_year: The publish_year of this Book.  # noqa: E501
+        :type publish_year: int
+        :param price: The price of this Book.  # noqa: E501
+        :type price: float
+        :param category: The category of this Book.  # noqa: E501
+        :type category: str
+        """
+        self.openapi_types = {
+            'id': str,
+            'title': str,
+            'author': str,
+            'isbn': str,
+            'publish_year': int,
+            'price': float,
+            'category': str
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'title': 'title',
+            'author': 'author',
+            'isbn': 'isbn',
+            'publish_year': 'publishYear',
+            'price': 'price',
+            'category': 'category'
+        }
+
+        self._id = id
+        self._title = title
+        self._author = author
+        self._isbn = isbn
+        self._publish_year = publish_year
+        self._price = price
+        self._category = category
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Book':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Book of this Book.  # noqa: E501
+        :rtype: Book
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> str:
+        """Gets the id of this Book.
+
+
+        :return: The id of this Book.
+        :rtype: str
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: str):
+        """Sets the id of this Book.
+
+
+        :param id: The id of this Book.
+        :type id: str
+        """
+
+        self._id = id
+
+    @property
+    def title(self) -> str:
+        """Gets the title of this Book.
+
+
+        :return: The title of this Book.
+        :rtype: str
+        """
+        return self._title
+
+    @title.setter
+    def title(self, title: str):
+        """Sets the title of this Book.
+
+
+        :param title: The title of this Book.
+        :type title: str
+        """
+
+        self._title = title
+
+    @property
+    def author(self) -> str:
+        """Gets the author of this Book.
+
+
+        :return: The author of this Book.
+        :rtype: str
+        """
+        return self._author
+
+    @author.setter
+    def author(self, author: str):
+        """Sets the author of this Book.
+
+
+        :param author: The author of this Book.
+        :type author: str
+        """
+
+        self._author = author
+
+    @property
+    def isbn(self) -> str:
+        """Gets the isbn of this Book.
+
+
+        :return: The isbn of this Book.
+        :rtype: str
+        """
+        return self._isbn
+
+    @isbn.setter
+    def isbn(self, isbn: str):
+        """Sets the isbn of this Book.
+
+
+        :param isbn: The isbn of this Book.
+        :type isbn: str
+        """
+
+        self._isbn = isbn
+
+    @property
+    def publish_year(self) -> int:
+        """Gets the publish_year of this Book.
+
+
+        :return: The publish_year of this Book.
+        :rtype: int
+        """
+        return self._publish_year
+
+    @publish_year.setter
+    def publish_year(self, publish_year: int):
+        """Sets the publish_year of this Book.
+
+
+        :param publish_year: The publish_year of this Book.
+        :type publish_year: int
+        """
+
+        self._publish_year = publish_year
+
+    @property
+    def price(self) -> float:
+        """Gets the price of this Book.
+
+
+        :return: The price of this Book.
+        :rtype: float
+        """
+        return self._price
+
+    @price.setter
+    def price(self, price: float):
+        """Sets the price of this Book.
+
+
+        :param price: The price of this Book.
+        :type price: float
+        """
+
+        self._price = price
+
+    @property
+    def category(self) -> str:
+        """Gets the category of this Book.
+
+
+        :return: The category of this Book.
+        :rtype: str
+        """
+        return self._category
+
+    @category.setter
+    def category(self, category: str):
+        """Sets the category of this Book.
+
+
+        :param category: The category of this Book.
+        :type category: str
+        """
+
+        self._category = category
