# Week4/openapi-comparison/0_OpenAPI/generated-server/openapi_server/models/create_book.py
@@ -1,0 +1,195 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server import util
+
+
+class CreateBook(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, title=None, author=None, isbn=None, publish_year=None, price=None, category=None):  # noqa: E501
+        """CreateBook - a model defined in OpenAPI
+
+        :param title: The title of this CreateBook.  # noqa: E501
+        :type title: str
+        :param author: The author of this CreateBook.  # noqa: E501
+        :type author: str
+        :param isbn: The isbn of this CreateBook.  # noqa: E501
+        :type isbn: str
+        :param publish_year: The publish_year of this CreateBook.  # noqa: E501
+        :type publish_year: int
+        :param price: The price of this CreateBook.  # noqa: E501
+        :type price: float
+        :param category: The category of this CreateBook.  # noqa: E501
+        :type category: str
+        """
+        self.openapi_types = {
+            'title': str,
+            'author': str,
+            'isbn': str,
+            'publish_year': int,
+            'price': float,
+            'category': str
+        }
+
+        self.attribute_map = {
+            'title': 'title',
+            'author': 'author',
+            'isbn': 'isbn',
+            'publish_year': 'publishYear',
+            'price': 'price',
+            'category': 'category'
+        }
+
+        self._title = title
+        self._author = author
+        self._isbn = isbn
+        self._publish_year = publish_year
+        self._price = price
+        self._category = category
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'CreateBook':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The CreateBook of this CreateBook.  # noqa: E501
+        :rtype: CreateBook
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def title(self) -> str:
+        """Gets the title of this CreateBook.
+
+
+        :return: The title of this CreateBook.
+        :rtype: str
+        """
+        return self._title
+
+    @title.setter
+    def title(self, title: str):
+        """Sets the title of this CreateBook.
+
+
+        :param title: The title of this CreateBook.
+        :type title: str
+        """
+        if title is None:
+            raise ValueError("Invalid value for `title`, must not be `None`")  # noqa: E501
+
+        self._title = title
+
+    @property
+    def author(self) -> str:
+        """Gets the author of this CreateBook.
+
+
+        :return: The author of this CreateBook.
+        :rtype: str
+        """
+        return self._author
+
+    @author.setter
+    def author(self, author: str):
+        """Sets the author of this CreateBook.
+
+
+        :param author: The author of this CreateBook.
+        :type author: str
+        """
+        if author is None:
+            raise ValueError("Invalid value for `author`, must not be `None`")  # noqa: E501
+
+        self._author = author
+
+    @property
+    def isbn(self) -> str:
+        """Gets the isbn of this CreateBook.
+
+
+        :return: The isbn of this CreateBook.
+        :rtype: str
+        """
+        return self._isbn
+
+    @isbn.setter
+    def isbn(self, isbn: str):
+        """Sets the isbn of this CreateBook.
+
+
+        :param isbn: The isbn of this CreateBook.
+        :type isbn: str
+        """
+
+        self._isbn = isbn
+
+    @property
+    def publish_year(self) -> int:
+        """Gets the publish_year of this CreateBook.
+
+
+        :return: The publish_year of this CreateBook.
+        :rtype: int
+        """
+        return self._publish_year
+
+    @publish_year.setter
+    def publish_year(self, publish_year: int):
+        """Sets the publish_year of this CreateBook.
+
+
+        :param publish_year: The publish_year of this CreateBook.
+        :type publish_year: int
+        """
+
+        self._publish_year = publish_year
+
+    @property
+    def price(self) -> float:
+        """Gets the price of this CreateBook.
+
+
+        :return: The price of this CreateBook.
+        :rtype: float
+        """
+        return self._price
+
+    @price.setter
+    def price(self, price: float):
+        """Sets the price of this CreateBook.
+
+
+        :param price: The price of this CreateBook.
+        :type price: float
+        """
+
+        self._price = price
+
+    @property
+    def category(self) -> str:
+        """Gets the category of this CreateBook.
+
+
+        :return: The category of this CreateBook.
+        :rtype: str
+        """
+        return self._category
+
+    @category.setter
+    def category(self, category: str):
+        """Sets the category of this CreateBook.
+
+
+        :param category: The category of this CreateBook.
+        :type category: str
+        """
+
+        self._category = category
